--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ main {
   z-index: 1;
   background: rgba(255, 255, 255, 0.8);
   backdrop-filter: blur(0.25em);
-  width: 320px;
+  width: 400px;
   max-width: 90vw;
 }
 
@@ -53,9 +53,12 @@ form {
   gap: 16px;
   grid-template-areas:
           "odd-color         even-color"
+          "border-amount     border-color"
           "separation-amount separation-color"
+          "outer-separation  outer-separation"
           "button-reset      button-print";
   grid-template-columns: 1fr 1fr;
+  align-items: end;
 }
 
 label {
@@ -75,18 +78,109 @@ label[for=even-color] {
   grid-area: even-color;
 }
 
+label[for=border-amount] {
+  grid-area: border-amount;
+}
+
+label[for=border-color] {
+  grid-area: border-color;
+}
+
 label[for=separation-amount] {
   grid-area: separation-amount;
 }
 
-input,
-button {
-  display: block;
+label[for=separation-color] {
+  grid-area: separation-color;
+}
+
+label[for=outer-separation] {
+  grid-area: outer-separation;
+}
+
+.input {
+  margin: 0;
+  display: flex;
   width: 100%;
   height: 32px;
   appearance: none;
   border: solid 1px #8f1b32;
-  padding: 3px;
+  outline: none;
+  background: #f5f5f5;
+  transition-property: border, background, outline;
+  transition-timing-function: ease-in-out;
+  transition-duration: 200ms;
+  align-items: baseline;
+  padding-right: 4px;
+  padding-left: 4px;
+  gap: 4px;
+}
+
+.input > input {
+  background: none;
+  border: none;
+  outline: none;
+  height: 32px;
+  width: 100%;
+}
+
+.input:hover,
+.input:focus,
+.button:hover,
+.button:focus {
+  border-color: #dc143c;
+  background: #ffffff;
+}
+
+.input[type=color] {
+  cursor: pointer;
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
+.input[type=color]::-moz-color-swatch {
+  border: none;
+}
+
+.input[type=color]::-webkit-color-swatch {
+  border: none;
+}
+
+.input[type=color]::-webkit-color-swatch-wrapper {
+  padding: 0;
+}
+
+.input[type=checkbox] {
+  outline: solid 1px #8f1b32;
+  border: solid 2px #f5f5f5;
+  height: 16px;
+  width: 16px;
+  padding: 0;
+  display: inline-block;
+  vertical-align: baseline;
+}
+
+.input[type=checkbox]:hover,
+.input[type=checkbox]:focus {
+  outline-color: #dc143c;
+}
+
+.input[type=checkbox]:checked {
+  background: #8f1b32;
+}
+
+.input[type=checkbox]:checked:hover,
+.input[type=checkbox]:checked:focus {
+  background: #dc143c;
+  outline-color: #dc143c;
+}
+
+.button {
+  display: block;
+  width: 100%;
+  height: 32px;
+  border: solid 1px #8f1b32;
+  padding: 4px;
   outline: none;
   background: #f5f5f5;
   transition-property: border, background, color;
@@ -94,52 +188,28 @@ button {
   transition-duration: 200ms;
 }
 
-input:hover,
-input:focus,
-button:hover,
-button:focus {
-  border-color: #dc143c;
-  background: #ffffff;
-}
-
-input[type=color] {
-  cursor: pointer;
-}
-
-input[type=color]::-moz-color-swatch {
-  border: none;
-}
-
-input[type=color]::-webkit-color-swatch {
-  border: none;
-}
-
-input[type=color]::-webkit-color-swatch-wrapper {
-  padding: 0;
-}
-
-.button-reset {
+.button.button-reset {
   grid-area: button-reset;
 }
 
-.button-reset {
+.button.button-reset {
   color: #000000;
 }
 
-.button-reset:hover,
-.button-reset:focus {
+.button.button-reset:hover,
+.button.button-reset:focus {
   color: #dc143c;
 }
 
-.button-print {
+.button.button-print {
   color: #ffffff;
   grid-area: button-print;
   border: none;
   background: #8f1b32;
 }
 
-.button-print:hover,
-.button-print:focus {
+.button.button-print:hover,
+.button.button-print:focus {
   color: #ffffff;
   border: none;
   background: #dc143c;
@@ -163,32 +233,43 @@ a:focus {
   color: #dc143c;
 }
 
-.board {
-  display: grid;
-  gap: var(--separation-amount);
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(8, 1fr);
-  transition-property: gap, margin-left;
+.wrapper {
+  transition-property: margin-left, border;
   transition-timing-function: ease-in-out;
   transition-duration: 200ms;
-  justify-content: center;
-  align-content: center;
   width: calc(100vmin - 2em);
   height: calc(100vmin - 2em);
+  border: solid var(--border-amount) var(--border-color);
 }
 
-@media screen and (min-width: calc(320px + 100vmin)) {
-  .board {
-    margin-left: 320px;
+@media screen and (min-width: calc(400px + 100vmin)) {
+  .wrapper {
+    margin-left: 400px;
   }
 }
 
 @media print {
-  .board {
+  .wrapper {
     width: 100vmin;
     height: 100vmin;
     margin-left: 0;
   }
+}
+
+.board {
+  display: grid;
+  gap: var(--separation-amount);
+  background: var(--separation-color);
+  border: solid calc(var(--separation-amount) * var(--outer-separation)) var(--separation-color);
+  transition-property: gap, border, background;
+  transition-timing-function: ease-in-out;
+  transition-duration: 200ms;
+  justify-content: center;
+  align-content: center;
+  width: 100%;
+  height: 100%;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(8, 1fr);
 }
 
 .square {
